implemented rule report generator

--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
 			<div id="navbarMenu" class="navbar-menu">
 				<div class="navbar-end">
 					<a class="navbar-item is-active" href="/home">Home</a>
-					<a class="navbar-item">Rules Report</a>
+					<a class="navbar-item" href="/download_csv">Rules Report</a>
 					<a class="navbar-item" href="https://github.com/noCR4SH/rules-listing-webapp">GitHub</a>
 					<div class="navbar-item has-dropdown is-hoverable">
 						<a class="navbar-link">Account</a>
